# shopping-bon

./: .gitignore  Cargo.toml  README.md  flake.nix
data/: categories  categories.ron
escpos-lib/: Cargo.toml
escpos-lib/src/: cmds.rs  format.rs  lib.rs
print-bin/: Cargo.toml
print-bin/src/: main.rs
printer-bot/: Cargo.toml  printer-bot.service
printer-bot/src/: error.rs  main.rs  settings.rs
shopping-bon-bot/: Cargo.toml  Cross.toml  writeup.md
shopping-bon-bot/data/: categories.ron  items.ron
shopping-bon-bot/design/plan/: plan-cache.lib  plan.sch  plan.sch-bak
shopping-bon-bot/src/: bot.rs  error.rs  main.rs  result_ext.rs  settings.rs  state.rs  storage.rs
src/: command.rs  main.rs  storage.rs
