[package]
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"
name = "shopping-bon"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.13"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
serde = "1.0.125"
lazy_static = "1.4.0"
async-trait = "0.1.48"

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]


[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
version = "0.9.0"

[dependencies.tokio]
features = ["macros", "rt", "time", "fs"]
version = "1.2"
