[package]
name = "printer-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.13"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
serde = "1.0.125"
lazy_static = "1.4.0"
async-trait = "0.1.48"
escpos-lib = { path = "../escpos-lib" }
serialport = "4.0.1"

[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
branch = "main"
version = "0.9.0"

[dependencies.tokio]
features = ["macros", "rt", "time", "fs"]
version = "1.2"
